--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pablo Rivera</title>
 
+    <!-- favicon -->
+
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="favicon_io/site.webmanifest">
+
   
     <!-- CSS      -->
     <link rel="stylesheet" href="css/styles.css">
@@ -114,7 +121,7 @@
             
               <section id="flex-container5">
 
-                <h1>¡ Trabajemos Juntos !</h1>
+                <h1>¡Trabajemos Juntos!</h1>
                     
                 <div><a href="mailto:pablo.rivera.pf@gmail.com"><img src="img/mail.png" width="20%" alt="mail"></a></div>
                 <div><a href="https://github.com/pabloriveraveras"><img src="img/github.png" width="20%" alt="github"></a></div>
